@@ -50,10 +50,10 @@ The command can include arguments."
 
 (defconst inferior-haskell-error-regexp-alist
   ;; The format of error messages used by Hugs.
-  '(("^ERROR \"\\(.+?\\)\"\\(:\\| line \\)\\([0-9]+\\) - " 1 3)
+  `(("^ERROR \"\\(.+?\\)\"\\(:\\| line \\)\\([0-9]+\\) - " 1 3)
     ;; Format of error messages used by GHCi.
-    ("^\\(.+?\\):\\([0-9]\\):\\( \\|$\\)" 1 3)
-    )
+    ("^\\(.+?\\):\\([0-9]+\\):\\(\\([0-9]+\\):\\)?\\( \\|\n +\\)\\(Warning\\)?"
+     1 2 4 ,@(if (fboundp 'compilation-fake-loc) '((6)))))
   "Regexps for error messages generated by inferior Haskell processes.
 The format should be the same as for `compilation-error-regexp-alist'.")
 
